--- a/services.html
+++ b/services.html
@@ -32,15 +32,31 @@ as explained in the instructions [Check point 3 part 2]
  <main class="content">
 <!-- place your main page contents here,
 as explained in the instructions for each page -->
-<h2> Welcome To Our Amazing Spa </h2>
-<p>Welcome to The Striped Umbrella — a full-service resort and spa just steps from the Gulf of Mexico and ten miles east
-    of Crab Key, Florida. Come enjoy the best of both worlds, a secluded sandy beach populated with beautiful birds, yet a
-    short drive down the road from world-class shopping, restaurants, and entertainment. Bring a good book and leave your
-    laptop at the office. You won't want to go home.</p>
-<img src="images/pool.jpg" alt="spa">
-<video width="320" height="240" controls>
-    <source src="media/w3schooldemo.mp4" type="video/mp4">
-    Your browser does not support the video tag.
+<h2> What we can provide you!</h2>
+<h3>Massages</h3>
+<dl>
+    <dt>Sports Massage</dt>
+    <dd>Our deepest massage for tense and sore muscles. Not recommended for first-time massage clients.</dd>
+    
+    <dt>Swedish Massage</dt>
+    <dd>A gentle, relaxing massage. Promotes balance and wellness. Warms muscle tissue and increases circulation.</dd>
+    
+    <dt>Hot Stone Massage</dt>
+    <dd>Uses polished local river rocks to distribute gentle heat. Good for tight, sore muscles. Balances and invigorates the body muscles. Advance notice required.</dd>
+</dl>
+<table>
+    <thead>
+        <tr>
+            <th> The service you need for your body</th>
+        </tr>
+        <tr>
+            <th>Service</th>
+            <th>Description</th>
+            <th>Service</th>
+            <th>Description</th>
+        </tr>
+</table>
+
  </main>
  <footer>
 <!-- place the footer content here -->
