--- a/services.html
+++ b/services.html
@@ -5,15 +5,13 @@
  <title>services</title>
 Add here the full optional meta elements for:
 author, content and description
+
 </head>
 <body>
  <div class="container">
  <header>
-    <img src="su_banner.gif" alt="SU Banner">
-<!--
-The banner image (su_banner.gif) has to be here
-[Check point 3 part 1]
--->
+    <img src="images/su_banner.gif" alt="SU Banner">
+
  <nav id="main-nav">
 
     <li>
@@ -23,15 +21,11 @@ The banner image (su_banner.gif) has to be here
         <ul><a href="contact.html">Contact Us</a></ul>
     </li>
 
-<!--
-Place your main navigation items here,
-as explained in the instructions [Check point 3 part 2]
--->
+
  </nav>
  </header>
  <main class="content">
-<!-- place your main page contents here,
-as explained in the instructions for each page -->
+
 <h2> What we can provide you!</h2>
 <h3>Massages</h3>
 <dl>
@@ -55,11 +49,48 @@ as explained in the instructions for each page -->
             <th>Service</th>
             <th>Description</th>
         </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Revitalizing Facial</td>
+            <td>A light massage with a customized
+                essential oil blend that moisturizes
+                the skin and restores circulation.</td>
+            <td>Gentlemen’s Facial</td>
+            <td>A cleansing facial that
+                restores a healthy glow.
+                Includes a neck and
+                shoulder massage.</td>
+        </tr>
+        <tr>
+            <td>Milk Mask</td>
+            <td>A soothing mask that softens and moisturizes the face. Leaves your
+                skin looking younger.</td>
+            <td>Salt Glow</td>
+            <td>Imported sea salts are
+                massaged into the skin,
+                exfoliating and cleansing
+                the pores.</td>
+        </tr>
+        <tr>
+            <td>Herbal Wrap</td>
+            <td>Organic lavender blooms create a
+                detoxifying and calming treatment
+                to relieve aches and pains.</td>
+            <td>Seaweed Body Wrap</td>
+            <td>Seaweed is a natural
+                detoxifying agent that also
+                helps improve circulation.</td>
+        </tr>   
+    </tbody>
+    <tfoot>
+        <tr>
+            <td>All these services are provided on daily bases</td>
+        </tr>
 </table>
 
  </main>
  <footer>
-<!-- place the footer content here -->
 <p>Copyright © 2023 ILAC and EFREI Paris – HTML-CSS major lab-work - created by: BATHELEMY Lucas - All rights
     reserved
     </p>
