--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@ The banner image (su_banner.gif) has to be here
 -->
  <nav id="main-nav">
 
-    <li>
-        <ul><a href="index.html">Home</a></ul>
-        <ul><a href="about.html">About Us</a></ul> 
-        <ul><a href="services.html">Our Services</a></ul>
-        <ul><a href="contact.html">Contact Us</a></ul>
-    </li>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li> 
+        <li><a href="services.html">Our Services</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+    </ul>
+
 
 <!--
 Place your main navigation items here,
@@ -36,9 +37,10 @@ as explained in the instructions for each page -->
     short drive down the road from world-class shopping, restaurants, and entertainment. Bring a good book and leave your
     laptop at the office. You won't want to go home.</p>
 <img src="images/pool.jpg" alt="spa">
-<video width="320" height="240" controls>
+<div><video width="320" height="240" controls>
     <source src="media/w3schooldemo.mp4" type="video/mp4">
     Your browser does not support the video tag.
+    </video></div>
  </main>
  <footer>
 <!-- place the footer content here -->
