--- a/about.html
+++ b/about.html
@@ -22,12 +22,13 @@ The banner image (su_banner.gif) has to be here
 -->
  <nav id="main-nav">
 
-    <li>
-        <ul><a href="index.html">Home</a></ul>
-        <ul><a href="about.html">About Us</a></ul> 
-        <ul><a href="services.html">Our Services</a></ul>
-        <ul><a href="contact.html">Contact Us</a></ul>
-    </li>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li> 
+        <li><a href="services.html">Our Services</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+    </ul>
+
 
 <!--
 Place your main navigation items here,
@@ -45,33 +46,33 @@ as explained in the instructions for each page -->
     been popular worldwide, but are especially widespread in Europe and Japan. Day spas are also quite popular, and offer
     various personal care treatments.</p>
     <ol>
-    <li>Origins of the term
-        <ol>
-            <li>a. Bathing in Greek and Roman times</li>
-            <li>b. Bathing in medieval times</li>
-            <li>c. Bathing in the 18th century</li>
-            <li>d. Bathing in the 19th and 20th centuries</li>
-        </ol>
-    </li>
-    <li>Treatments</li>
-    <li>Recent trends</li>
-    <li>Types of treatments</li>
-</ol>
-    <h3>Origins of the term</h3>
+        <li><a href="#origins">Origins of the term</a>
+            <ol>
+                <li>a. Bathing in Greek and Roman times</a></li>
+                <li>b. Bathing in medieval times</a></li>
+                <li>c. Bathing in the 18th century</a></li>
+                <li>d. Bathing in the 19th and 20th centuries</a></li>
+            </ol>
+        </li>
+        <li><a href="#treatment">Treatments</a></li>
+        <li><a href="#trend">Recent trends</a></li>
+        <li><a href="#type">Types of treatments</a></li>
+    </ol>
+    <h3 id="origins">Origins of the term</h3>
     <p>The term is derived from the name of the town of Spa, Belgium, whose name is known back from Roman times, when
         the location was called Aquae Spadanae, sometimes incorrectly connected to the Latin word spargere meaning to
         scatter, sprinkle or moisten. The word spa itself denotes "fountain". Some experts also suggest that the word "spa"
         originated from the name of the Belgian town named Spa where a curative natural spring was discovered in the 14th
         century.</p>
-    <h3>Treatments</h3>
+    <h3 id="treatment">Treatments</h3>
     <p>A 'body treatment', 'spa treatment', or 'cosmetic treatment' is non-medical procedure to help the health of the body. It
         is often performed at a resort, destination spa, day spa, beauty salon or school. </p>
-    <h3>Recent trends</h3>
+    <h3 id="trend">Recent trends</h3>
     <p>In the modern world spa therapies are linked to various domains including beauty, pampering, indulgence, and health.
         Spa industry is thought to be growing at a significantly high rate, and most importantly it is observed to embrace
         wellness as its core business. By the late 1930s more than 2,000 hot- or cold-springs health resorts were operating in the
         United States.</p>
-    <h3>Types of treatments</h3>
+    <h3 id="type">Types of treatments</h3>
     <ul>
         <li>Day spa, a form of beauty salon.</li>
         <li>Destination spa, a resort for personal care treatments.</li>
