--- a/services.html
+++ b/services.html
@@ -14,12 +14,12 @@ author, content and description
 
  <nav id="main-nav">
 
-    <li>
-        <ul><a href="index.html">Home</a></ul>
-        <ul><a href="about.html">About Us</a></ul> 
-        <ul><a href="services.html">Our Services</a></ul>
-        <ul><a href="contact.html">Contact Us</a></ul>
-    </li>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li> 
+        <li><a href="services.html">Our Services</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+    </ul>
 
 
  </nav>
