--- a/about.html
+++ b/about.html
@@ -11,15 +11,14 @@ author, content and description
         list-style-type: none; /* Supprime la numérotation */
     }
 </style>
+<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
  <div class="container">
  <header>
-    <img src="images/su_banner.gif" alt="SU Banner">
-<!--
-The banner image (su_banner.gif) has to be here
-[Check point 3 part 1]
--->
+    <img src="assets/images/su_banner.gif" alt="SU Banner">
+
  <nav id="main-nav">
 
     <ul>
@@ -30,17 +29,12 @@ The banner image (su_banner.gif) has to be here
     </ul>
 
 
-<!--
-Place your main navigation items here,
-as explained in the instructions [Check point 3 part 2]
--->
  </nav>
  </header>
- <main class="content">
-<!-- place your main page contents here,
-as explained in the instructions for each page -->
+ <main class="container">
+
 <h2>What you need to know about spa!</h2>
-<p>A spa is a location where mineral-rich spring water (and sometimes seawater) is used to give medicinal baths. Spa towns
+<p class="content">A spa is a location where mineral-rich spring water (and sometimes seawater) is used to give medicinal baths. Spa towns
     or spa resorts (including hot springs resorts) typically offer various health treatments, which are also known as
     balneotherapy. The belief in the curative powers of mineral waters goes back to prehistoric times. Such practices have
     been popular worldwide, but are especially widespread in Europe and Japan. Day spas are also quite popular, and offer
@@ -59,16 +53,16 @@ as explained in the instructions for each page -->
         <li><a href="#type">Types of treatments</a></li>
     </ol>
     <h3 id="origins">Origins of the term</h3>
-    <p>The term is derived from the name of the town of Spa, Belgium, whose name is known back from Roman times, when
+    <p class="content">The term is derived from the name of the town of Spa, Belgium, whose name is known back from Roman times, when
         the location was called Aquae Spadanae, sometimes incorrectly connected to the Latin word spargere meaning to
         scatter, sprinkle or moisten. The word spa itself denotes "fountain". Some experts also suggest that the word "spa"
         originated from the name of the Belgian town named Spa where a curative natural spring was discovered in the 14th
         century.</p>
     <h3 id="treatment">Treatments</h3>
-    <p>A 'body treatment', 'spa treatment', or 'cosmetic treatment' is non-medical procedure to help the health of the body. It
+    <p class="content">A 'body treatment', 'spa treatment', or 'cosmetic treatment' is non-medical procedure to help the health of the body. It
         is often performed at a resort, destination spa, day spa, beauty salon or school. </p>
     <h3 id="trend">Recent trends</h3>
-    <p>In the modern world spa therapies are linked to various domains including beauty, pampering, indulgence, and health.
+    <p class="content">In the modern world spa therapies are linked to various domains including beauty, pampering, indulgence, and health.
         Spa industry is thought to be growing at a significantly high rate, and most importantly it is observed to embrace
         wellness as its core business. By the late 1930s more than 2,000 hot- or cold-springs health resorts were operating in the
         United States.</p>
@@ -79,12 +73,12 @@ as explained in the instructions for each page -->
         <li>Spa town, a town visited for the supposed healing properties of the water.</li>
         <li>Foot spa</li>
     </ul>
-    <p>To learn more about spa in general, you can visit the <a href="https://en.wikipedia.org/wiki/Spa">Spa Page in Wikipedia.
+    <p class="content">To learn more about spa in general, you can visit the <a href="https://en.wikipedia.org/wiki/Spa">Spa Page in Wikipedia.
     </a></p>
  </main>
  <footer>
 <!-- place the footer content here -->
-<p>Copyright © 2023 ILAC and EFREI Paris – HTML-CSS major lab-work - created by: BATHELEMY Lucas - All rights
+<p class="content">Copyright © 2023 ILAC and EFREI Paris – HTML-CSS major lab-work - created by: BATHELEMY Lucas - All rights
     reserved
     </p>
  </footer>
