--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
  <meta charset="utf-8">
  <title>HomePage</title>
+ <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
  <div class="container">
  <header>
-    <img src="images/su_banner.gif" alt="SU Banner">
-<!--
-The banner image (su_banner.gif) has to be here
-[Check point 3 part 1]
--->
+    <img src="assets/images/su_banner.gif" alt="SU Banner">
+
  <nav id="main-nav">
 
     <ul>
@@ -22,25 +20,23 @@ The banner image (su_banner.gif) has to be here
     </ul>
 
 
-<!--
-Place your main navigation items here,
-as explained in the instructions [Check point 3 part 2]
--->
+
  </nav>
  </header>
- <main class="content">
+ <main class="container">
 <!-- place your main page contents here,
 as explained in the instructions for each page -->
 <h2> Welcome To Our Amazing Spa </h2>
-<p>Welcome to The Striped Umbrella — a full-service resort and spa just steps from the Gulf of Mexico and ten miles east
+<p class="content">Welcome to The Striped Umbrella — a full-service resort and spa just steps from the Gulf of Mexico and ten miles east
     of Crab Key, Florida. Come enjoy the best of both worlds, a secluded sandy beach populated with beautiful birds, yet a
     short drive down the road from world-class shopping, restaurants, and entertainment. Bring a good book and leave your
     laptop at the office. You won't want to go home.</p>
-<img src="images/pool.jpg" alt="spa">
-<div><video width="320" height="240" controls>
-    <source src="media/w3schooldemo.mp4" type="video/mp4">
+<img class="img-centre" src="assets\images\pool.jpg" alt="Pool" width="750px" height="363px">
+<div><video width="400px" height="176px" controls poster="assets\image\sea_spa_logo.jpg">
+    <source src="assets\\media\w3schooldemo.mp4" type="video/mp4">
     Your browser does not support the video tag.
-    </video></div>
+
+ </video></div>
  </main>
  <footer>
 <!-- place the footer content here -->
