--- a/services.html
+++ b/services.html
@@ -3,14 +3,14 @@
 <head>
  <meta charset="utf-8">
  <title>services</title>
-Add here the full optional meta elements for:
-author, content and description
+ <link rel="stylesheet" href="css/style.css">
+
 
 </head>
 <body>
  <div class="container">
  <header>
-    <img src="images/su_banner.gif" alt="SU Banner">
+    <img src="assets/images/su_banner.gif" alt="SU Banner">
 
  <nav id="main-nav">
 
@@ -24,7 +24,7 @@ author, content and description
 
  </nav>
  </header>
- <main class="content">
+ <main class="container">
 
 <h2> What we can provide you!</h2>
 <h3>Massages</h3>
@@ -38,10 +38,10 @@ author, content and description
     <dt>Hot Stone Massage</dt>
     <dd>Uses polished local river rocks to distribute gentle heat. Good for tight, sore muscles. Balances and invigorates the body muscles. Advance notice required.</dd>
 </dl>
-<table>
+<table border="1">
     <thead>
         <tr>
-            <th> The service you need for your body</th>
+            <th colspan="4"> The service you need for your body</th>
         </tr>
         <tr>
             <th>Service</th>
@@ -85,13 +85,14 @@ author, content and description
     </tbody>
     <tfoot>
         <tr>
-            <td>All these services are provided on daily bases</td>
+            <th colspan="4">All these services are provided on daily bases</th>
         </tr>
+    </tfoot>
 </table>
 
  </main>
  <footer>
-<p>Copyright © 2023 ILAC and EFREI Paris – HTML-CSS major lab-work - created by: BATHELEMY Lucas - All rights
+<p class="content">Copyright © 2023 ILAC and EFREI Paris – HTML-CSS major lab-work - created by: BATHELEMY Lucas - All rights
     reserved
     </p>
  </footer>
